// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Information should render correctly with a custom backgroundColor 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #45d6b5;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

.emotion-6.emotion-6 {
  color: #4f0599;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <p
        class="emotion-5 emotion-6 emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with a custom color 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #45d6b5;
}

.emotion-6.emotion-6 {
  color: #45d6b5;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <p
        class="emotion-5 emotion-6 emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an children 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <div>
        Testing component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an heading 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

.emotion-6.emotion-6 {
  color: #4f0599;
  font-weight: 500;
}

.emotion-9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

.emotion-9.emotion-9 {
  color: #4f0599;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <p
        class="emotion-5 emotion-6 emotion-2"
      >
        Bonjour
      </p>
      <p
        class="emotion-5 emotion-9 emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  fill: #45d6b5;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
  margin-right: 16px;
}

.emotion-6.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

.emotion-9.emotion-9 {
  color: #4f0599;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-2"
    >
      <p
        class="emotion-8 emotion-9 emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an image 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
  margin-right: 24px;
}

.emotion-5.emotion-5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

.emotion-8.emotion-8 {
  color: #4f0599;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <img
      class="emotion-3 emotion-2"
      src="//img.jpg"
    />
    <div
      class="emotion-5 emotion-2"
    >
      <p
        class="emotion-7 emotion-8 emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with default props 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

.emotion-6.emotion-6 {
  color: #4f0599;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <p
        class="emotion-5 emotion-6 emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;
